# amazon-screenshot-tracker

./: .gitignore  .replit  Procfile  amazon_monitor.db  main.py  pyproject.toml  railway.json  requirements.txt  reset_badge.py  settings.html  test_app.py  test_phase2.py
attached_assets/: Pasted--Adding-product-for-user-josh-matern-gmail-com-ID-1-Scraping-product-https-www-amazon-com--1758405843820_1758405843822.txt
logs/: .gitignore
templates/: achievements.html  add_product.html  base.html  cancel_subscription.html  change_subscription.html  complete_registration.html  dashboard.html  index.html  landing.html  pricing.html  privacy.html  refunds.html  settings.html  success.html  terms.html
templates/auth/: forgot_password.html  login.html  register.html  resend_verification.html  reset_password.html
templates/errors/: 404.html
