[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "flask-bs4>=5.3.1.0",
    "flask==3.1.0",
    "requests==2.32.3",
    "schedule==1.2.2",
    "scrapingbee==2.0.1",
    "stripe==5.5.0",
    "psycopg2-binary==2.9.10",
    "cryptography==45.0.7",
]
